# fu

./: .editorconfig  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: build.yml  format.yml  release.yml  rust.yml
src/: logger.rs  main.rs  size.rs
tests/: integration.rs
tests/example/: 1_bigger.txt
